--- a/games/index.html
+++ b/games/index.html
@@ -25,34 +25,35 @@ title: Games
         {%- assign captureTheFrogTitle = item.title -%}
     {%- endif -%}
 {%- endfor -%}
-<p>
-<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.</p>
 <p>The following is a reverse chronological list of games that I have made myself.</p>
 <p>
-    <strong>{{ unityPrototypeTitle }}</strong>
+    <h3>{{ unityPrototypeTitle }}</h3>
     <ul>
-        <li><a href = "{{ unityPrototypePageRelDir }}">Play here</a>
+        <li><a href="{{ unityPrototypePageRelDir }}">Play here</a>
     </ul>
 </p>
 <p>
-    <strong>{{ dodgeAndShootTitle }}</strong>
-    <br>
-    <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
+    <h3>{{ dodgeAndShootTitle }}</h3>
+    <p>
+        <img class="customBorder" src="/images/DodgeAndShoot_thumb.jpg" alt="Dodge & Shoot">
+    </p>
     <ul>
-        <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
-        <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
-        <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
-        <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
+        <li><a href="{{ dodgeAndShootPageRelDir }}">Play here</a>
+        <li><a href="http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
+        <li><a href="http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
+        <li><a href="http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
     </ul>
 </p>
 <p>
-    <strong>{{ captureTheFrogTitle }}</strong>
-    <br>
-    <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
+    <h3>{{ captureTheFrogTitle }}</h3>
+    <p>
+        <img class="customBorder" src="/images/CaptureTheFrog_thumb.jpg" alt="Capture The Frog">
+    </p>
     <ul>
-        <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
-        <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
-        <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
-        <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
+        <li><a href="{{ captureTheFrogPageRelDir }}">Play here</a>
+        <li><a href="http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
+        <li><a href="http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
+        <li><a href="http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
     </ul>
 </p>
