--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ title: Home
 <p>Feel free to have a look around.</p>
 <p>
     <ul>
-        <li><a href="{{ twitterUrl }}">Twitter</a>
-        <li><a href="{{ gitHubUrl }}">GitHub</a>
+        <li><a href="{{ twitterUrl }}">Twitter</a></li>
+        <li><a href="{{ gitHubUrl }}">GitHub</a></li>
         <ul>
-            <li><a href="{{ gitHubGistUrl }}">GitHub Gist</a>
+            <li><a href="{{ gitHubGistUrl }}">GitHub Gist</a></li>
         </ul>
-        <li><a href="https://www.youtube.com/user/MultiversalNomad">YouTube</a>
-        <li><a href="{{ site.linkedInUrl }}">LinkedIn</a>
+        <li><a href="https://www.youtube.com/user/MultiversalNomad">YouTube</a></li>
+        <li><a href="{{ site.linkedInUrl }}">LinkedIn</a></li>
     </ul>
 </p>
