--- a/games/index.html
+++ b/games/index.html
@@ -30,7 +30,7 @@ title: Games
 <p>
     <h3>{{ unityPrototypeTitle }}</h3>
     <ul>
-        <li><a href="{{ unityPrototypePageRelDir }}">Play here</a>
+        <li><a href="{{ unityPrototypePageRelDir }}">Play here</a></li>
     </ul>
 </p>
 <p>
@@ -39,10 +39,10 @@ title: Games
         <img class="customBorder" src="/images/DodgeAndShoot_thumb.jpg" alt="Dodge & Shoot">
     </p>
     <ul>
-        <li><a href="{{ dodgeAndShootPageRelDir }}">Play here</a>
-        <li><a href="http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
-        <li><a href="http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
-        <li><a href="http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
+        <li><a href="{{ dodgeAndShootPageRelDir }}">Play here</a></li>
+        <li><a href="http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
+        <li><a href="http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
+        <li><a href="http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></li>
     </ul>
 </p>
 <p>
@@ -51,9 +51,9 @@ title: Games
         <img class="customBorder" src="/images/CaptureTheFrog_thumb.jpg" alt="Capture The Frog">
     </p>
     <ul>
-        <li><a href="{{ captureTheFrogPageRelDir }}">Play here</a>
-        <li><a href="http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
-        <li><a href="http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
-        <li><a href="http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
+        <li><a href="{{ captureTheFrogPageRelDir }}">Play here</a></li>
+        <li><a href="http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
+        <li><a href="http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
+        <li><a href="http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></li>
     </ul>
 </p>
