--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -8,7 +8,7 @@ title: Capture The Frog (Flash) (2010)
     <embed src="/flash/capture_the_frog.swf" width="320" height="512"></embed>
 </object>
 <ul>
-    <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
-    <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a>
-    <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a>
+    <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
+    <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
+    <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></li>
 </ul>
