--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -8,7 +8,7 @@ title: Dodge & Shoot (Flash) (2010)
     <embed src="/flash/dodge_and_shoot.swf" width="550" height="500"></embed>
 </object>
 <ul>
-    <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
-    <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a>
-    <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a>
+    <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
+    <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
+    <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></li>
 </ul>
