--- a/games/index.html
+++ b/games/index.html
@@ -36,7 +36,7 @@ title: Games
 <p>
     <h3>{{ dodgeAndShootTitle }}</h3>
     <p>
-        <img class="customBorder" src="/images/DodgeAndShoot_thumb.jpg" alt="Dodge & Shoot">
+        <img class="customBorder" src="/images/DodgeAndShoot_thumb.jpg" alt="Dodge & Shoot thumbnail" title="Dodge & Shoot">
     </p>
     <ul>
         <li><a href="{{ dodgeAndShootPageRelDir }}">Play here</a></li>
@@ -48,7 +48,7 @@ title: Games
 <p>
     <h3>{{ captureTheFrogTitle }}</h3>
     <p>
-        <img class="customBorder" src="/images/CaptureTheFrog_thumb.jpg" alt="Capture The Frog">
+        <img class="customBorder" src="/images/CaptureTheFrog_thumb.jpg" alt="Capture The Frog thumbnail" title="Capture The Frog">
     </p>
     <ul>
         <li><a href="{{ captureTheFrogPageRelDir }}">Play here</a></li>
