--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@ title: Home
 <p>Feel free to have a look around.</p>
 <p>
     <ul>
-        <li><a href="{{ twitterUrl }}">Twitter</a></li>
-        <li><a href="{{ gitHubUrl }}">GitHub</a></li>
-        <ul>
-            <li><a href="{{ gitHubGistUrl }}">GitHub Gist</a></li>
-        </ul>
-        <li><a href="https://www.youtube.com/user/MultiversalNomad">YouTube</a></li>
-        <li><a href="{{ site.linkedInUrl }}">LinkedIn</a></li>
+        <li>
+            <a href="{{ twitterUrl }}">Twitter</a>
+        </li>
+        <li>
+            <a href="{{ gitHubUrl }}">GitHub</a>
+            <ul>
+                <li>
+                    <a href="{{ gitHubGistUrl }}">GitHub Gist</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/user/MultiversalNomad">YouTube</a>
+        </li>
+        <li>
+            <a href="{{ site.linkedInUrl }}">LinkedIn</a>
+        </li>
     </ul>
 </p>
