--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -17,8 +17,8 @@ unityFilePath: unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v1
 <p>If the game below is not working, make sure you have the latest version of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> installed.</p>
 <div id="unityPlayer">
     <div class="missing">
-        <a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
-            <img alt="Unity Web Player. Install now!" src="http://webplayer.unity3d.com/installation/getunity.png" width="193" height="63" />
+        <a href="https://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
+            <p>Unity Web Player. Install now!</p>
         </a>
     </div>
 </div>
