--- a/games/index.html
+++ b/games/index.html
@@ -37,9 +37,9 @@ title: Games
 </p>
 <ul>
     <li><a href="{{ dodgeAndShootPageRelDir }}">Play here</a></li>
-    <li><a href="http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
-    <li><a href="http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
-    <li><a href="http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></li>
+    <li><a href="https://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
+    <li><a href="https://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
+    <li><a href="https://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></li>
 </ul>
 <h3>{{ captureTheFrogTitle }}</h3>
 <p>
@@ -47,7 +47,7 @@ title: Games
 </p>
 <ul>
     <li><a href="{{ captureTheFrogPageRelDir }}">Play here</a></li>
-    <li><a href="http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
-    <li><a href="http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
-    <li><a href="http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></li>
+    <li><a href="https://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
+    <li><a href="https://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
+    <li><a href="https://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></li>
 </ul>
