--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -2,13 +2,13 @@
 layout: default
 title: Capture The Frog (Flash) (2010)
 ---
-<p>If the game below is not working, make sure you have the latest version of the <a href="http://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
+<p>If the game below is not working, make sure you have the latest version of the <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
 <object width="320" height="512">
     <param name="movie" value="/flash/capture_the_frog.swf">
     <embed src="/flash/capture_the_frog.swf" width="320" height="512"></embed>
 </object>
 <ul>
-    <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
-    <li><a href = "http://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
-    <li><a href = "http://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></li>
+    <li><a href="https://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
+    <li><a href="https://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
+    <li><a href="https://www.youtube.com/watch?v=AwCx-ZoiOGI">Watch gameplay video</a></li>
 </ul>
