--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -2,13 +2,13 @@
 layout: default
 title: Dodge & Shoot (Flash) (2010)
 ---
-<p>If the game below is not working, make sure you have the latest version of the <a href="http://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
+<p>If the game below is not working, make sure you have the latest version of the <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
 <object width="550" height="500">
     <param name="movie" value="/flash/dodge_and_shoot.swf">
     <embed src="/flash/dodge_and_shoot.swf" width="550" height="500"></embed>
 </object>
 <ul>
-    <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
-    <li><a href = "http://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
-    <li><a href = "http://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></li>
+    <li><a href="https://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
+    <li><a href="https://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
+    <li><a href="https://www.youtube.com/watch?v=yhlMGnep6zo">Watch gameplay video</a></li>
 </ul>
