--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Third Person Movement and Camera Control v1.0 (Unity; Prototype) (2014)
+unityFilePath: /unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v1_0.unity3d
 ---
 <p>
     <ul>
@@ -14,13 +15,11 @@ title: Third Person Movement and Camera Control v1.0 (Unity; Prototype) (2014)
     </ul>
 </p>
 <p>If the game below is not working, make sure you have the latest version of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> installed.</p>
-<div class="contentUnity">
-    <div id="unityPlayer">
-        <div class="missing">
-            <a href="https://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
-                <img alt="Unity Web Player. Install now!" src="https://ssl-webplayer.unity3d.com/installation/getunity.png" width="193" height="63" />
-            </a>
-        </div>
+<div id="unityPlayer">
+    <div class="missing">
+        <a href="https://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
+            <p>Unity Web Player. Install now!</p>
+        </a>
     </div>
 </div>
 <p class="footer">&laquo; created with <a href="https://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
