--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -15,11 +15,14 @@ unityFilePath: https://www.jplc.ca/unity/TestGame_BasicCharControl_v1_0/TestGame
     </ul>
 </p>
 <p>If the game below is not working, make sure you have the latest version of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> installed.</p>
-<div id="unityPlayer">
-    <div class="missing">
-        <a href="https://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
-            <p>Unity Web Player. Install now!</p>
-        </a>
-    </div>
-</div>
-<p class="footer">&laquo; created with <a href="https://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+<!-- Unity code found at: https://docs.unity3d.com/530/Documentation/Manual/WorkingwithUnityObject.html -->
+<div class="content">
+            <div id="unityPlayer">
+                <div class="missing">
+                    <a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
+                        <img alt="Unity Web Player. Install now!" src="http://webplayer.unity3d.com/installation/getunity.png" width="193" height="63" />
+                    </a>
+                </div>
+            </div>
+        </div>
+        <p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
