--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Third Person Movement and Camera Control v1.0 (Unity; Prototype) (2014)
-unityFilePath: https://www.jplc.ca/unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v1_0.unity3d
+unityFilePath: /unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v1_0.unity3d
 ---
 <p>
     <ul>
