--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -14,15 +14,15 @@ unityFilePath: /unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v
         <li>If input is not being registered (including keyboard and mouse movement), click on the game to establish focus and try again.</li>
     </ul>
 </p>
-<p>If the game below is not working, make sure you have the latest version of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> installed.</p>
-<!-- Unity code found at: https://docs.unity3d.com/530/Documentation/Manual/WorkingwithUnityObject.html -->
+<p>Note that while the game below requires the use of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> to run, the Unity Web Player is no longer officially supported by Unity, and as such, the game might not work regardless of which version of the Unity Web Player you may have installed.</p>
+<!-- Unity HTML found at: https://docs.unity3d.com/530/Documentation/Manual/WorkingwithUnityObject.html -->
 <div class="content">
-            <div id="unityPlayer">
-                <div class="missing">
-                    <a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
-                        <img alt="Unity Web Player. Install now!" src="http://webplayer.unity3d.com/installation/getunity.png" width="193" height="63" />
-                    </a>
-                </div>
-            </div>
+    <div id="unityPlayer">
+        <div class="missing">
+            <a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
+                <img alt="Unity Web Player. Install now!" src="/unity/getunity.png" width="193" height="63" />
+            </a>
         </div>
-        <p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+    </div>
+</div>
+<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
