--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Capture The Frog (Flash) (2010)
 ---
 <p>If the game below is not working, make sure you have the latest version of the <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
-<object width="320" height="512">
+<object width="320" height="512" data="/flash/capture_the_frog.swf">
     <param name="movie" value="/flash/capture_the_frog.swf">
-    <embed src="/flash/capture_the_frog.swf" width="320" height="512"></embed>
+    <embed src="/flash/capture_the_frog.swf" width="320" height="512">
 </object>
 <ul>
     <li><a href="https://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
