--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Dodge & Shoot (Flash) (2010)
 ---
 <p>If the game below is not working, make sure you have the latest version of the <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
-<object width="550" height="500">
+<object width="550" height="500" data="/flash/dodge_and_shoot.swf">
     <param name="movie" value="/flash/dodge_and_shoot.swf">
-    <embed src="/flash/dodge_and_shoot.swf" width="550" height="500"></embed>
+    <embed src="/flash/dodge_and_shoot.swf" width="550" height="500">
 </object>
 <ul>
     <li><a href="https://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
