--- a/index.html
+++ b/index.html
@@ -25,4 +25,7 @@ title: Home
     <li>
         <a href="{{ site.linkedInUrl }}">LinkedIn</a>
     </li>
+    <li>
+        <a href="https://mastodon.social/@JPLC">Mastodon</a>
+    </li>
 </ul>
