Added cohost link to index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ title: Home
         <a href="{{ site.linkedInUrl }}">LinkedIn</a>
     </li>
     <li>
+        <a href="https://cohost.org/JPLC">cohost</a>
+    </li>
+    <li>
         <a href="https://mastodon.social/@JPLC">Mastodon</a>
     </li>
 </ul>
