Updated YouTube channel link
Using new YouTube "handle" format.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home
         </ul>
     </li>
     <li>
-        <a href="https://www.youtube.com/user/MultiversalNomad">YouTube</a>
+        <a href="https://youtube.com/@JPLC">YouTube</a>
     </li>
     <li>
         <a href="{{ site.linkedInUrl }}">LinkedIn</a>
