--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ title: Home
         </ul>
     </li>
     <li>
+        <a href="https://stackexchange.com/users/2123735/jplc">Stack Exchange</a>
+    </li>
+    <li>
         <a href="https://youtube.com/@JPLC">YouTube</a>
     </li>
     <li>
@@ -30,5 +33,8 @@ title: Home
     </li>
     <li>
         <a href="https://mastodon.social/@JPLC">Mastodon</a>
+    </li>
+    <li>
+        <a href="https://www.tumblr.com/multiversalnomad">Tumblr</a>
     </li>
 </ul>
