Added Hive to list of socials.
Added Hive username to list (Hive doesn't presently support direct links to profiles since it only works via app).

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Home
 {%- assign gitHubGistUrl = "https://gist.github.com/MultiversalNomad" -%}
 <p>Welcome! This is the website of {{ site.firstName }} {{ site.lastName }}. I also go by {{ site.nickname }} in some places online.</p>
 <p>Feel free to have a look around.</p>
+<p>Here's a list of some other places where you can find me:</p>
 <ul>
     <li>
         <a href="{{ twitterUrl }}">Twitter</a>
@@ -36,5 +37,8 @@ title: Home
     </li>
     <li>
         <a href="https://www.tumblr.com/multiversalnomad">Tumblr</a>
+    </li>
+    <li>
+        <a href="https://www.hivesocial.app/">Hive:</a> @jplc
     </li>
 </ul>
