--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ title: Home
         <a href="{{ twitterUrl }}">Twitter</a>
     </li>
     <li>
+        <a href="https://www.threads.net/@jplc.ca">Threads</a>
+    </li>
+    <li>
         <a href="{{ gitHubUrl }}">GitHub</a>
         <ul>
             <li>
@@ -36,7 +39,7 @@ title: Home
         <a href="https://mastodon.social/@JPLC">Mastodon</a>
     </li>
     <li>
-        <a href="https://www.tumblr.com/multiversalnomad">Tumblr</a>
+        <a href="https://www.tumblr.com/jplc-ca">Tumblr</a>
     </li>
     <li>
         <a href="https://www.hivesocial.app/">Hive:</a> @jplc
