Update index.html with Bluesky profile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ title: Home
         <a href="https://www.threads.net/@jplc.ca">Threads</a>
     </li>
     <li>
+        <a href="https://bsky.app/profile/jplc.bsky.social">Bluesky</a>
+    </li>
+    <li>
         <a href="{{ gitHubUrl }}">GitHub</a>
         <ul>
             <li>
