Update index.html for new Bluesky URL

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ title: Home
 <p>Here's a list of some other places where you can find me:</p>
 <ul>
     <li>
-        <a href="{{ twitterUrl }}">Twitter</a>
+        <a href="https://bsky.app/profile/jplc.ca">Bluesky</a>
     </li>
     <li>
         <a href="https://www.threads.net/@jplc.ca">Threads</a>
     </li>
     <li>
-        <a href="https://bsky.app/profile/jplc.bsky.social">Bluesky</a>
+        <a href="{{ twitterUrl }}">Twitter</a>
     </li>
     <li>
         <a href="{{ gitHubUrl }}">GitHub</a>
