Update capture_the_frog/index.html to include ruffle.rs script
Added ruffle.rs script so that the .swf file can run in modern browsers.

--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -7,6 +7,7 @@ title: Capture The Frog (Flash) (2010)
     <param name="movie" value="/flash/capture_the_frog.swf">
     <embed src="/flash/capture_the_frog.swf" width="320" height="512">
 </object>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 <ul>
     <li><a href="https://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a></li>
     <li><a href="https://www.kongregate.com/games/JPLC/capture-the-frog">Play at Kongregate</a></li>
