Update capture_the_frog/index.html with Ruffle explainer
Added an explanation that the Flash content playback is powered by Ruffle.

--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Capture The Frog (Flash) (2010)
 ---
-<p>If the game below is not working, make sure you have the latest version of the <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
+<p>The Adobe Flash content playback is powered by <a href="https://ruffle.rs/">Ruffle</a> since <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> is no longer supported by modern web browsers.</p>
 <object width="320" height="512" data="/flash/capture_the_frog.swf">
     <param name="movie" value="/flash/capture_the_frog.swf">
     <embed src="/flash/capture_the_frog.swf" width="320" height="512">
