--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -2,11 +2,12 @@
 layout: default
 title: Dodge & Shoot (Flash) (2010)
 ---
-<p>If the game below is not working, make sure you have the latest version of the <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> installed.</p>
+<p>The Adobe Flash content playback is powered by <a href="https://ruffle.rs/">Ruffle</a> since <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> is no longer supported by modern web browsers.</p>
 <object width="550" height="500" data="/flash/dodge_and_shoot.swf">
     <param name="movie" value="/flash/dodge_and_shoot.swf">
     <embed src="/flash/dodge_and_shoot.swf" width="550" height="500">
 </object>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 <ul>
     <li><a href="https://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a></li>
     <li><a href="https://www.kongregate.com/games/JPLC/dodge-shoot">Play at Kongregate</a></li>
