Update unity_basic_char_control_v1_0/index.html Unity web player wording
Updated the wording of the Unity Web Player message.

--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -12,7 +12,7 @@ unityFilePath: /unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v
     <li>If a connected gamepad is not working, make sure the controller is active and reload this webpage.</li>
     <li>If input is not being registered (including keyboard and mouse movement), click on the game to establish focus and try again.</li>
 </ul>
-<p>Note that while the game below requires the use of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> to run, the Unity Web Player is no longer officially supported by Unity, and as such, the game might not work regardless of which version of the Unity Web Player you may have installed.</p>
+<p>Note that while the game below requires the use of the <a href="https://unity3d.com/webplayer/">Unity Web Player</a> to run, the Unity Web Player is no longer officially supported by Unity or by modern web browsers. As such, the game might not work regardless of which version of the Unity Web Player you may have installed.</p>
 <!-- Unity HTML found at: https://docs.unity3d.com/530/Documentation/Manual/WorkingwithUnityObject.html -->
 <div class="content">
     <div id="unityPlayer">
