Update capture_the_frog/index.html text layout
Edited the text layout.

--- a/games/capture_the_frog/index.html
+++ b/games/capture_the_frog/index.html
@@ -2,8 +2,10 @@
 layout: default
 title: Capture The Frog (Flash) (2010)
 ---
-<p>The Adobe Flash content playback is powered by <a href="https://ruffle.rs/">Ruffle</a> since <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> is no longer supported by modern web browsers.</p>
-<p>Requires a keyboard and mouse to play.</p>
+<ul>
+    <li>Requires a keyboard and mouse to play.</li>
+</ul>
+<p>Note that the Adobe Flash content playback is powered by <a href="https://ruffle.rs/">Ruffle</a> since <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> is no longer supported by modern web browsers.</p>
 <object width="320" height="512" data="/flash/capture_the_frog.swf">
     <param name="movie" value="/flash/capture_the_frog.swf">
     <embed src="/flash/capture_the_frog.swf" width="320" height="512">
