Update dodge_and_shoot/index.html to explain that keyboard and mouse are required
Added text to explain that keyboard and mouse are required to play.

--- a/games/dodge_and_shoot/index.html
+++ b/games/dodge_and_shoot/index.html
@@ -2,7 +2,10 @@
 layout: default
 title: Dodge & Shoot (Flash) (2010)
 ---
-<p>The Adobe Flash content playback is powered by <a href="https://ruffle.rs/">Ruffle</a> since <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> is no longer supported by modern web browsers.</p>
+<ul>
+    <li>Requires a keyboard and mouse to play.</li>
+</ul>
+<p>Note that the Adobe Flash content playback is powered by <a href="https://ruffle.rs/">Ruffle</a> since <a href="https://get.adobe.com/flashplayer/">Adobe Flash player</a> is no longer supported by modern web browsers.</p>
 <object width="550" height="500" data="/flash/dodge_and_shoot.swf">
     <param name="movie" value="/flash/dodge_and_shoot.swf">
     <embed src="/flash/dodge_and_shoot.swf" width="550" height="500">
