Update unity_basic_char_control_v1_0/index.html to better explain input methods
Edited text to better explain input methods.

--- a/games/prototypes/unity_basic_char_control_v1_0/index.html
+++ b/games/prototypes/unity_basic_char_control_v1_0/index.html
@@ -4,10 +4,11 @@ title: Third Person Movement and Camera Control v1.0 (Unity; Prototype) (2014)
 unityFilePath: /unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v1_0.unity3d
 ---
 <ul>
-    <li>To move the character, use either the WASD keys or the left analog stick of a gamepad (gamepad input optimized for a Windows-based Xbox 360 Controller).</li>
+    <li>Requires either a keyboard and mouse or a gamepad to play. Gamepad input is optimized for a Windows-based <a href="https://learn.microsoft.com/en-us/windows/win32/xinput/xinput-game-controller-apis-portal">XInput</a> controller (for example, an Xbox 360 controller).</li>
+    <li>To move the character, use either the WASD keys or the left analog stick of a gamepad.</li>
     <li>To move the camera, use either the mouse, the arrow keys, or the right analog stick of a gamepad.</li>
-    <li>To jump, press space or, if you have a gamepad, the equivalent of the "A" button of an Xbox 360 controller.</li>
-    <li>To aim the character forward camera-wise, hold the left-hand shift key, or, if you have a gamepad, the equivalent of the "Left Bumper" button of an Xbox 360 controller.</li>
+    <li>To jump, press space or, if you have a gamepad, the equivalent of the "A" button of an XInput controller.</li>
+    <li>To aim the character forward camera-wise, hold the left-hand shift key, or, if you have a gamepad, the equivalent of the "Left Bumper" button of an XInput controller.</li>
     <li>If you fall off the map, you'll have to reload this webpage to play again.</li>
     <li>If a connected gamepad is not working, make sure the controller is active and reload this webpage.</li>
     <li>If input is not being registered (including keyboard and mouse movement), click on the game to establish focus and try again.</li>
