--- a/about_me/index.html
+++ b/about_me/index.html
@@ -5,7 +5,7 @@ title: About Me
 <p class="centered">
     <img src="/images/my_face.jpg" alt="Photo of my face" title="My face">
 </p>
-<p>I am {{ site.firstName }} {{ site.lastName }} (he/him), sometimes known as {{ site.nickname }}. I'm 34, and a Canadian who is sometimes a video game developer.</p>
+<p>I am {{ site.firstName }} {{ site.lastName }} (he/him), sometimes known as {{ site.nickname }}. Born in 1990, I'm a Canadian who is sometimes a video game developer.</p>
 <p>You can contact me at my e-mail:</p>
 <p>{{ site.emailWritten }}</p>
 <p>My social media and such can be found on the <a href="/">homepage</a>.</p>
