--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 {%- assign gitHubGistUrl = "https://gist.github.com/MultiversalNomad" -%}
 <p>Welcome! This is the website of {{ site.firstName }} {{ site.lastName }}. I also go by {{ site.nickname }} in some places online.</p>
 <p>Feel free to have a look around.</p>
-<p>Here's a list of some other places where you can find me:</p>
+<p>Here's a list of some other places where you can find me, in no particular order:</p>
 <ul>
     <li>
         <a href="https://bsky.app/profile/jplc.ca">Bluesky</a>
@@ -20,9 +20,6 @@ title: Home
     </li>
     <li>
         <a href="https://www.tumblr.com/jplc-ca">Tumblr</a>
-    </li>
-    <li>
-        <a href="{{ twitterUrl }}">Twitter</a>
     </li>
     <li>
         <a href="{{ gitHubUrl }}">GitHub</a>
@@ -44,5 +41,8 @@ title: Home
     </li>
     <li>
         <a href="https://www.hivesocial.app/">Hive:</a> @jplc
+    </li>
+    <li>
+        <a href="{{ twitterUrl }}">X / Twitter</a>
     </li>
 </ul>
