--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@ title: Home
 <p>Here's a list of some other places where you can find me, in no particular order:</p>
 <ul>
     <li>
-        <a href="https://bsky.app/profile/jplc.ca">Bluesky</a>
+        <a href="https://bsky.app/profile/jplc.ca">Bluesky / ATmosphere</a>
     </li>
     <li>
-        <a href="https://mastodon.social/@JPLC">Mastodon</a>
+        <a href="https://app.wafrn.net/blog/JPLC">Wafrn / Fediverse</a>
     </li>
     <li>
-        <a href="https://www.threads.net/@jplc.ca">Threads</a>
+        <a href="https://mastodon.social/@JPLC">Mastodon / Fediverse</a>
+    </li>
+    <li>
+        <a href="https://www.threads.net/@jplc.ca">Threads / Fediverse</a>
     </li>
     <li>
         <a href="https://www.tumblr.com/jplc-ca">Tumblr</a>
